<menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/Atualizar"/>

        <item
        android:id="@+id/action_configure"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/Configuracao"/>

        <item
                android:id="@+id/action_exit"
                android:orderInCategory="3"
                android:showAsAction="ifRoom|withText"
                android:title="@string/Sair"/>

        <!--
        <item        android:id="@+id/action_sobre"
        android:orderInCategory="4"
        android:showAsAction="ifRoom|withText"
        android:title="@string/Sobre"/>
        -->


</menu>