<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Usuario"
            android:id="@+id/textView1" android:paddingLeft="10dp" android:layout_marginTop="10dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtconfigUsuario" android:paddingBottom="20dp"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Senha"
            android:id="@+id/textView2" android:paddingLeft="10dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtconfigSenha" android:paddingBottom="20dp"/>



    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Servidor"
    android:id="@+id/textView3" android:paddingLeft="10dp"/>


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtconfigServidor" android:paddingBottom="20dp"/>


    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Salvar"
            android:id="@+id/configSalvar"
            android:onClick="onBtnconfigSalvar" android:layout_marginTop="10dp"/>


</LinearLayout>